ingress-more-backends.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: household-book
          servicePort: 8080
      - path: /auth/*
        backend:
          serviceName: keycloak
          servicePort: 8080
